# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: my_ci.yml
formats/: __init__.py
formatter/: __init__.py  json.py
gendiff/: __init__.py  cli.py  compare.py  diff_format.py  gendiff.py  parse.py
gendiff/formatters/: __init__.py  json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
hexlet_code/: __init__.py  app_main.py  gendiff.py
hexlet_code/scripts/: gendiff.py
tests/: test_gendiff.py
tests/test_data/: diff_json.txt  file3.json
